--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@mdi/font": "^7.4.47",
-    "@nuxt/ui": "^3.2.0",
     "@nuxtjs/google-adsense": "^3.0.0",
-    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/howler": "^2.2.12",
     "howler": "^2.2.4",
     "nuxt": "^3.17.5",
+    "sass": "^1.89.2",
     "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.9.2"
   },
   "devDependencies": {
     "eslint-plugin-vue": "^10.2.0",
